Building swagger
